--- a/src/Components/PlayerData.scss
+++ b/src/Components/PlayerData.scss
@@ -4,6 +4,19 @@
   margin-bottom: 20px;
 }
 
+.player-table tbody tr:nth-child(even) {
+  background-color: white;
+}
+
+/* Estilos para las filas impares de la tabla con clase "mi-tabla" */
+.player-table tbody tr:nth-child(odd) {
+  background-color: rgb(201, 201, 201);
+}
+
+.player-table thead {
+  background-color: red;
+}
+
 .player-table th,
 .player-table td {
   padding: 5px 10px;
