--- a/src/Components/Styles.scss
+++ b/src/Components/Styles.scss
@@ -66,37 +66,11 @@
     font-weight: bold;
     margin-right: 10px;
   }
-  
-  // .dropdown-container {
-  //   width: 30%;
-  //   margin: 0 auto;
-  //   z-index: 2;
-  //   position: absolute;
-  // }
 
   .selected-players-container {
     // width: 30%;
     margin: 0 auto;
   }
-
-
-  // .remove-button {
-  //   background-color: transparent;
-  //   border: none;
-  //   padding: 0;
-  //   cursor: pointer;
-  // }
-  
-  // .remove-button:hover {
-  //   color: #f44336;
-  // }
-  
-  // .remove-button::after {
-  //   content: 'x';
-  //   font-size: 16px;
-  //   font-weight: bold;
-  // }
-
 
   .selected-player-item {
     display: flex;
@@ -134,12 +108,12 @@
     font-weight: bold;
   }
   
-  .player-finder-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-  }
+  // .player-finder-container {
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   position: relative;
+  // }
 
   .overall-rating-summary {
     z-index: 1; 
@@ -147,20 +121,22 @@
   
   .search-container {
     position: relative;
-    // width: 30%;
+    width: 80%;
     .search-input {
-      width: 100%;
+      width: 80%;
       margin: 0 auto;
-      display: block;
+      display: flex;
+      position: inherit;
+      left: 10%;
     }
   }
   
   .dropdown-container {
-    position: absolute;
-    // top: 100%;
-    left: 0;
-    width: 100%;
+    position: inherit;
+    left: 10%;
+    width: 80%;
     z-index: 1;
+    margin: 0 auto;
   }
   
   .formation-number {
@@ -182,4 +158,20 @@
   }
 }
 
-  
+.players-table {
+  width: 50%;
+}
+
+.players-table.hidden {
+  display: none;
+}
+
+.players-table {
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .players-table {
+    width: 50%;
+  }
+}
