--- a/src/Components/PlayerData.scss
+++ b/src/Components/PlayerData.scss
@@ -2,6 +2,7 @@
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 20px;
+  font-family: "LaLiga";
 }
 
 .player-table tbody tr:nth-child(even) {
@@ -10,17 +11,34 @@
 
 /* Estilos para las filas impares de la tabla con clase "mi-tabla" */
 .player-table tbody tr:nth-child(odd) {
-  background-color: rgb(201, 201, 201);
+  background-color: rgb(234, 234, 234);
 }
 
 .player-table thead {
-  background-color: red;
+  background-color: rgb(234, 234, 234);
+  th{
+    font-size: 1.4rem;
+  }
 }
 
 .player-table th,
 .player-table td {
   padding: 5px 10px;
-  border: 1px solid #ccc;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  font-weight: 500;
+
+  display: table-cell;
+  vertical-align: middle;
+  padding-left: 3%;
+  padding-right: 3%;
+  position: relative;
+  width: 10%;
+  min-width: 65px;
+}
+
+.player-table tr{
+  height: 40px;
 }
 
 .player-name {
@@ -31,4 +49,30 @@
 .player-rating {
   width: 15%;
   text-align: center;
+}
+
+.player-fullname{
+display: inline-block;
+}
+
+.player-buttons{
+  :hover{
+    opacity: 0.7;
+  }
+}
+
+.delete-all-button, .delete-button{
+    -webkit-box-align: center;
+    align-items: center;
+    background-color: rgb(255, 75, 68);
+    color: rgb(255, 255, 255);
+    height: 100%;
+    padding-inline: 1rem;
+    margin-right: 15px;
+    span{
+      display: block;
+      font-family: "LaLiga";
+      font-size: 14px;
+      line-height: 120%;
+    }
 }
